tests/paczka1/small_fuzzy/40018327.err
Error in line 2: aSmSBNvw S739 65,5
Error in line 3: aSmSBNvw S709 10,6
Error in line 1: c5caGQ S558 35,1
